# mesh_processing

./: .gitignore  CMakeLists.txt  README.md  core.h  laplacian.py  mesh_processing.h  notes.txt
dependencies/tetgen/: README.md  notes.txt
dependencies/tetgen/tetgen1.6.0/: CMakeLists.txt
examples/simple1/: greenland_copy.mesh  simple1.cpp
examples/simple2/: simple2.cpp
extensions/assimp_convert/: CMakeLists.txt  assimp_convert.cpp
include/: logging.h
include/mesh_processing/: mesh_processing.h
include/mesh_processing/compactified/: compactified.h
include/mesh_processing/enmesh/: enmesh.h
include/mesh_processing/extensions/: assimp_convert.h
include/mesh_processing/fairing/: fairing.h
include/mesh_processing/subdivision/: subdivision.h
include/mesh_processing/surface_geometry/: surface_geometry.h
include/mesh_processing/surface_mesh/: subdivision.h  surface_mesh.h  surface_mesh.ipp
include/mesh_processing/tetrahedralization/: tetrahedralization.h
include/surface_geometry/: surface_geometry.h
include/surface_mesh/: surface_mesh.h  surface_mesh.ipp
src/compactified/: compactified.cpp
src/enmesh/: enmesh.h  grid.cpp  io.cpp  test
src/fairing/: fairing.cpp
src/subdivision/: subdivision.cpp
src/surface_geometry/: surface_geometry.cpp  surface_geometry.h  surface_geometry.ipp
src/surface_mesh/: euler_editing.cpp  raw_editing.cpp  subdivision.cpp  surface_mesh.cpp  topology.cpp
src/tetrahedralization/: tetrahedralization.cpp
surface_geometry/: surface_geometry.cpp  surface_geometry.h
surface_mesh/: surface_mesh.cpp  surface_mesh.h  surface_mesh.ipp
testing/example_external_application/: CMakeCache.txt  CMakeLists.txt  Makefile  a.lua  barout.face  barout.node  cmake_install.cmake  example_external_application  main.cpp  tetgen-tmpfile_skipped.face  tetgen-tmpfile_skipped.node
